# geeky

./: .gitignore  check.sh  deploy  index.html  requirements.txt  setup.py  todo.txt
api_server/: db.sqlite3
api_server/api_server/: settings.py  urls.py  wsgi.py
api_server/search/: apps.py  models.py  tests.py  views.py
cgi/: controller.py  search_results.py  test  test.py
cpp_server/: .clang-format  .gitignore  CMakeLists.txt  check.sh
cpp_server/.clangd/index/: geeky.cpp.54C238A960201C25.idx
cpp_server/src/: connection_listener.cpp  connection_listener.h  file_map.h  filesystem.cpp  filesystem.h  geeky.cpp  http_helpers.cpp  http_helpers.h  http_request_dispatcher.cpp  http_request_dispatcher.h  http_request_handler.cpp  http_request_handler.h  http_session.cpp  http_session.h  test.cpp  test.h
cpp_server/src/html/: search.html
cpp_server/tests/: end2end.sh
data/: db.txt
html/: index.css  index.html
ocr/: db_gen.py
scraper/: scraper_test.py
scraper/dilbert/: scrapy.cfg
scraper/dilbert/dilbert/: items.py  middlewares.py  settings.py
scrapper/: scraper_daemon.py  scrapper_test.py
scrapper/dilbert/dilbert/: middlewares.py  pipelines.py  settings.py
scrapper/dilbert/dilbert/spiders/: comic_spider.py
src/: dbupdate.py  geeky.py
